문의하기 전체 조회 API 로직 수정